--- a/app/src/main/res/menu/activity_trang_chu_drawer.xml
+++ b/app/src/main/res/menu/activity_trang_chu_drawer.xml
@@ -20,38 +20,38 @@
             <!--android:id="@+id/nav_tools"-->
             <!--android:icon="@drawable/ic_menu_manage"-->
             <!--android:title="@string/menu_tools" />-->
-        <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_home_black_24dp"
-            android:title="@string/menu_home" />
-        <item
-            android:id="@+id/nav_dkkp"
-            android:icon="@drawable/ic_mode_edit_black_24dp"
-            android:title="@string/menu_dk" />
-        <item
-            android:id="@+id/nav_dkxt"
-            android:icon="@drawable/ic_mode_edit_black_24dp"
-            android:title="@string/menu_dkxt" />
-        <item
-            android:id="@+id/nav_tchs"
-            android:icon="@drawable/ic_person_black_24dp"
-            android:title="@string/menu_tchs" />
-        <item
-            android:id="@+id/nav_tthv"
-            android:icon="@drawable/ic_school_black_24dp"
-            android:title="@string/menu_tthv" />
-        <item
-            android:id="@+id/nav_tt"
-            android:icon="@drawable/ic_credit_card_black_24dp"
-            android:title="@string/menu_tt" />
-        <item
-            android:id="@+id/nav_qlcn"
-            android:icon="@drawable/ic_account_box_black_24dp"
-            android:title="@string/menu_qlcn" />
-        <item
-            android:id="@+id/nav_qldssv"
-            android:icon="@drawable/ic_people_black_24dp"
-            android:title="@string/menu_qlsv" />
+<!--        <item-->
+<!--            android:id="@+id/nav_home"-->
+<!--            android:icon="@drawable/ic_home_black_24dp"-->
+<!--            android:title="@string/menu_home" />-->
+<!--        <item-->
+<!--            android:id="@+id/nav_dkkp"-->
+<!--            android:icon="@drawable/ic_mode_edit_black_24dp"-->
+<!--            android:title="@string/menu_dk" />-->
+<!--        <item-->
+<!--            android:id="@+id/nav_dkxt"-->
+<!--            android:icon="@drawable/ic_mode_edit_black_24dp"-->
+<!--            android:title="@string/menu_dkxt" />-->
+<!--        <item-->
+<!--            android:id="@+id/nav_tchs"-->
+<!--            android:icon="@drawable/ic_person_black_24dp"-->
+<!--            android:title="@string/menu_tchs" />-->
+<!--        <item-->
+<!--            android:id="@+id/nav_tthv"-->
+<!--            android:icon="@drawable/ic_school_black_24dp"-->
+<!--            android:title="@string/menu_tthv" />-->
+<!--        <item-->
+<!--            android:id="@+id/nav_tt"-->
+<!--            android:icon="@drawable/ic_credit_card_black_24dp"-->
+<!--            android:title="@string/menu_tt" />-->
+<!--        <item-->
+<!--            android:id="@+id/nav_qlcn"-->
+<!--            android:icon="@drawable/ic_account_box_black_24dp"-->
+<!--            android:title="@string/menu_qlcn" />-->
+<!--        <item-->
+<!--            android:id="@+id/nav_qldssv"-->
+<!--            android:icon="@drawable/ic_people_black_24dp"-->
+<!--            android:title="@string/menu_qlsv" />-->
 
 
 
